# prox-challenge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RefactoringArtifacts.md  package-lock.json  package.json  railway.toml
backend/: Cargo.toml
backend/src/: main.rs  prompts.rs
backend/src/routes/: chat.rs  generate.rs  mod.rs  speak.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: artifact-sandbox.html  flow-field.html  silk-bg.html
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ArtifactPanel.tsx  ChatInput.tsx  Layout.tsx  Sidebar.tsx  SilkBackground.tsx  SparkleIcon.tsx  VoicePanel.tsx  WaveformIcon.tsx
frontend/src/contexts/: ChatSessionsContext.tsx
frontend/src/hooks/: useVoice.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx
frontend/src/utils/: parseArtifact.ts
scripts/: extract_knowledge.py  extract_video_tips.py  page_index.json  process_pdfs.py  structured_facts.json
