[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
dotenvy = "0.15"
anyhow = "1"
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
base64 = "0.22"
